--- a/less/components/card.less
+++ b/less/components/card.less
@@ -1,12 +1,28 @@
 .card {
 	display: flex;
+	flex-direction: column;
+	align-items: center;
 	position: relative;
+	padding: 10px;
+	>*{
+		text-align: center;
+	}
+
 	.hook-card();
 
+	&-holder{
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
 	&-header {
 		.hook-card-header();
 	}
 	&-body {
+		>span{
+			display: block;
+		}
 		.hook-card-body();
 	}
 	&-footer {
