--- a/less/main.less
+++ b/less/main.less
@@ -31,7 +31,16 @@
 	@media all and (max-width: 750px){
 		width: 100%;
 		text-align: center;
+		margin-bottom: 40px;
 	}
+}
+
+.header{
+	width: 100%;
+	position: fixed;
+	z-index: 1000;
+	top: 0;
+	background-color: #fff;
 }
 
 //navbar
@@ -112,11 +121,14 @@
 
 	}
 
-
 //section
 	.hook-section() {
 		padding-top: 100px;
 		padding-bottom: 100px;
+		@media all and (max-width: 750px){
+			padding-top: 50px;
+			padding-bottom: 50px;
+		}
 		.container{
 			display: flex;
 			flex-direction: column;
@@ -134,6 +146,10 @@
 		font-size: 42px;
 		text-transform: capitalize;
 		text-align: center;
+		margin-bottom: 100px;
+		@media all and (max-width: 750px){
+			margin-bottom: 50px;
+		}
 	};
 	.hook-section-body() {
 		display: flex;
@@ -155,7 +171,10 @@
 	};
 	.hook-section-fill-height() {};
 	.hook-section-misc() {};
+
+//main-section
 	.main-section{
+		margin-top: 115px;
 		position: relative;
 		min-height: 566px;
 		display: flex;
@@ -180,12 +199,188 @@
 			padding: 18px 38px;
 			font-weight: 600;
 			font-size: 26px;
+			&:hover {
+				background-color: @global-primary-background;
+			}
+			
 		}
 	}
 
-	
+//team
+	.team{
+		.card{
+			width: 23%;
+			@media all and (max-width: 950px){
+				width: 48%;
+				margin-bottom: 50px;
+			}
+			@media all and (max-width: 650px){
+				width: 100%;
+			}
+		}
+		.card-img{
+			margin-top: 30px;
+			margin-bottom: 60px;
+			@media all and (max-width: 950px){
+				margin-top: 20px;
+				margin-bottom: 30px;
+			}
+		}
+		.card-heading{
+			font-size: 22px;
+		}
+		.card-description{
+			margin: 15px auto;
+		}
+	}
+
+//plans
+	.plans{
+		.card{
+			@media all and (max-width: 850px){
+				width: 60%;
+				margin: 40px auto;
+			}
+			@media all and (max-width: 600px){
+				width: 80%;
+			}
+			width: 31%;
+			background-color: #fff;
+			border: none;
+			border-radius: 2px;
+			padding: 0;
+			&-header{
+				width: 100%;
+				border-radius: 2px 2px 0 0;
+				background-color: #485460;
+				padding: 15px;
+			}
+			&-heading{
+				font-size: 26px;
+			}
+			&-body{
+				width: 100%;
+				.price{
+					background-color: #f8f9fb;
+					border-bottom: 1px solid #ecf0f1;
+					height: 68px;
+					line-height: 68px;
+					font-size: 20px;
+				}
+				>span{
+					color: #9ea3a8;
+					width: 100%;
+					min-height: 45px;
+					border-bottom: 1px solid #ecf0f1;
+					line-height: 45px;
+				}
+			}
+			&-footer{
+				width: 100%;
+				border-radius: 0 0 2px 2px;
+				background-color: #f8f9fb;
+				padding: 29px 0;
+				.button{
+					padding: 12px 50px;
+					font-size: 17px;
+					font-weight: 600;
+										
+				}
+			}
+			/*.button:hover ~ .card-header{
+				background-color: @global-primary-background;
+			}*/
+		}
+	}
+
+//form
+	.hook-form() {};
+	.hook-form-group() {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	};
+	.hook-form-control() {
+		margin-bottom: 25px;
+	};
+	.hook-form-control-placeholder() {};
+	textarea.form-control {
+		min-height: 180px;
+		width: 100%;
+	}
+	.f-sm{
+		width: 48%;
+		display: inline-block;
+		@media all and (max-width: 500px){
+			width: 100%;
+		}
+	}
+
+
 //footer
 	.footer{
 		position: relative;
 		min-height: 682px;
+		.column-left{
+			color: #9ea3a8;
+			.heading{
+				font-size: 24px;
+			}
+			.description{
+				width: 80%;
+				@media all and (max-width: 750px){
+					width: 100%;
+				}
+			}
+			.social{
+				margin: 35px 0 20px;
+			}
+			.social-item{
+				display: inline-block;
+				width: 42px;
+				height: 42px;
+				margin-right: 14px;
+				line-height: 42px;
+				text-align: center;
+				border-radius: 50px;
+				font-size: 22px;
+				padding-top: 2px;
+				background-color: #3ec2f3;
+				>a{
+					text-decoration: none;
+					color: #fff;
+					display: block;
+					width: 100%;
+					height: 100%;
+					&:hover{
+						color: #485460;
+					}
+				}
+			}
+			.blue{
+				background-color: #3b5997;
+			}
+			.red{
+				background-color: #e44c41;
+			}
+			.info{
+				display: block;
+				margin-bottom: 12px;
+				font-family: 'MyriadPro';
+			}
+		}
+
+		.column-right{
+
+			.button{
+				padding: 12px 60px;
+				font-size: 22px;
+				float: right;
+				@media all and (max-width: 500px){
+					float: none;
+				}
+			}
+		}
+
 	}
+
