--- a/less/components/base.less
+++ b/less/components/base.less
@@ -21,9 +21,9 @@ img {
 }
 
 .container {
-	max-width: @container-width;
-	margin-left: auto;
+	//max-width: @container-width;
 	margin-right: auto;
+	margin-left: auto;	
 	padding: @container-padding;
 }
 
